# rmm

./: .gitignore  README.md  main.cpp  rmm.sln  rmm.vcxproj
.github/: README.md
client/: AppEngine.cpp  AppEngine.hpp  CMakeCache.txt  CMakeLists.txt  Client.cpp  Client.hpp  Makefile  Network.cpp  Network.hpp  RoomOverviewState.cpp  RoomOverviewState.hpp  ServerConnectState.cpp  ServerConnectState.hpp  VisualWorkstation.cpp  VisualWorkstation.hpp  Windows.cpp  Windows.hpp  client.vcxproj  client.vcxproj.filters  cmake_install.cmake  main.cpp  rmm-client
client-service-windows/: Program.cs  ProjectInstaller.Designer.cs  ProjectInstaller.cs  ProjectInstaller.resx  Resource.h  Service1.Designer.cs  Service1.cs  Service1.resx  client-service-windows.cpp  client-service-windows.csproj  client-service-windows.rc  client-service-windows.vcxproj  client-service-windows.vcxproj.filters  clientservicewindows.idl  stdafx.cpp
client-service-windows/Properties/: AssemblyInfo.cs
client-service-windowsPS/: client-service-windowsPS.vcxproj  client-service-windowsPS.vcxproj.filters
clientservice/: clientservice.csproj
server/: CMakeCache.txt  CMakeLists.txt  Makefile  Room.cpp  Room.hpp  Server.cpp  Server.hpp  Time.hpp  Workstation.hpp  cmake_install.cmake  main.cpp  rmm-server  room_davis.csv  server.vcxproj  server.vcxproj.filters
