CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

SET(PROJECT_NAME "rmm-server")

PROJECT(${PROJECT_NAME} LANGUAGES CXX)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_DEBUG_POSTFIX "-d")

SET(HEADERS ./Server.hpp ./Time.hpp)
SET(SOURCES ./Server.cpp ./main.cpp)
ADD_EXECUTABLE(${PROJECT_NAME} ${HEADERS} ${SOURCES})

#SET(SFML_STATIC_LIBRARIES TRUE)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ../SFML/include)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} sfml-graphics sfml-audio sfml-network sfml-window sfml-system -L"../SFML/lib")

TARGET_LINK_LIBRARIES(${PROJECT_NAME} stdc++fs)
