CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_REQUIRED_STANDARD ON)
SET(CMAKE_DEBUG_POSTFIX "-d")

SET(PROJECT_NAME "rmm-server")
PROJECT(${PROJECT_NAME} LANGUAGES CXX)

SET(HEADERS ./Room.hpp ./Server.hpp ./Time.hpp ./Workstation.hpp)
SET(SOURCES ./Room.cpp ./Server.cpp ./Workstation.cpp ./main.cpp)
ADD_EXECUTABLE(${PROJECT_NAME} ${HEADERS} ${SOURCES})

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ../SFML/include)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} sfml-network sfml-system -L"../SFML/lib")

TARGET_LINK_LIBRARIES(${PROJECT_NAME} stdc++fs)
